feat: add recipe PATCH
